cambio de direccion y deshabilite nodemailer

--- a/Front/src/app/dashboard/about/about.component.html
+++ b/Front/src/app/dashboard/about/about.component.html
@@ -11,11 +11,11 @@
         <div class="card-header ">
 
         <h1>NOSOTROS</h1>
-        <h2>Prestamos Lendiup S.A.S</h2>
+        <h2>Prestamos Lendillano S.A.S</h2>
         <h3>NIT. 00000-0</h3>
         <h3>+ 57 317 4237229</h3>
         <h3>+57 1 5555555</h3>
-        <a class="m-2" href="https://api.whatsapp.com/send?phone=3174237229"><strong>WhatsApp  </strong>  <i  class="fab fa-whatsapp fa-2x"></i></a>
+        <a class="m-2" href="https://api.whatsapp.com/send?phone=3193779313"><strong>WhatsApp  </strong>  <i  class="fab fa-whatsapp fa-2x"></i></a>
 
         </div>
         <div class="card-body ">
