--- a/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
+++ b/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
@@ -96,21 +96,21 @@
           <p>BANCO CAJA SOCIAL</p>
           <p>CUENTA CORRIENTE</p>
           <p>Numero: 123456789-0</p>
-          <p>A Nombre De: LENDIUP S.A.S</p>
+          <p>A Nombre De: LENDILLANOS S.A.S</p>
           <p>NIT: 51478695</p>
         </div>
         <div class="card m-2 p-2">
           <p>BANCOLOMBIA</p>
           <p>CUENTA CORRIENTE</p>
           <p>Numero: 65857745-9</p>
-          <p>A Nombre De: LENDIUP S.A.S</p>
+          <p>A Nombre De: LENDILLANOS S.A.S</p>
           <p>NIT: 51478695</p>
         </div>
         <div class="card m-2 p-2">
           <p>NEQUI</p>
           <p>TELEFONO</p>
           <p>Numero: 3152478541</p>
-          <p>A Nombre De: LENDIUP S.A.S</p>
+          <p>A Nombre De: LENDILLANOS S.A.S</p>
           <p>NIT: 51478695</p>
         </div>
 
