--- a/Front/src/app/landing/pages/landingv2/footer/footer.component.html
+++ b/Front/src/app/landing/pages/landingv2/footer/footer.component.html
@@ -8,7 +8,7 @@
             <!-- Footer Logo -->
             <img
               src="../../../../../assets/images/ft-logo.png "
-              alt="Lendiup - Logo 12 "
+              alt="Lendillano - Logo 12 "
             />
           </div>
           <!-- /.Footer Logo -->
@@ -94,7 +94,7 @@
               <li><a href="# ">Prestamos sobre vehiculos</a></li>
               <li><a href="# ">Prestamos para constucción</a></li>
               <li><a href="# ">INVIERTE</a></li>
-              
+
             </ul>
           </div>
           <!-- /.widget footer -->
@@ -128,7 +128,7 @@
     <div class="container">
       <div class="row text-white-50">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-          <p>© Copyright 2020 | Compañía de préstamos Lendiup</p>
+          <p>© Copyright 2020 | Compañía de préstamos Lendillano</p>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-right">
           <p>Condiciones de uso | Política de privacidad</p>
@@ -136,5 +136,5 @@
       </div>
     </div>
   </div>
-  
+
   <a href="#0" class="cd-top" title="Go to top">Ir Arriba</a>
