--- a/Front/src/app/shared-dashboard/navbar/navbar.component.html
+++ b/Front/src/app/shared-dashboard/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="navbar" color="primary">
   <button mat-icon-button ><mat-icon>menu</mat-icon></button>
   <!-- (click)="snav.toggle() -->
-  <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home"><h1>LENDIUP</h1></a>
+  <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home"><h1>LENDILLANOS</h1></a>
   <span class="navbar-spacer"></span>
   <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
     <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
