--- a/Front/src/app/shared/register/register.component.html
+++ b/Front/src/app/shared/register/register.component.html
@@ -53,7 +53,7 @@
       <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox1" formControlName="terminos">
 
-        <a href="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" for="checkbox1" class="form-check-label text-white">Acepto Terminos Y Condiciones</a>
+        <a href="../../../assets/pdf/Terminos Y Condiciones - Lendillano.pdf" for="checkbox1" class="form-check-label text-white">Acepto Terminos Y Condiciones</a>
       </fieldset>
       <fieldset class="form-check mb-3">
         <input type="checkbox" class="form-check-input" id="checkbox2" formControlName="politicas">
