--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -1,6 +1,6 @@
 <div class="panel-header">
   <div class="header text-center">
-    <h2 class="title">Lendiup</h2>
+    <h2 class="title">Lendillano</h2>
   </div>
 </div>
 
