--- a/Front/src/app/landing/pages/landingv2/navbar/navbar.component.html
+++ b/Front/src/app/landing/pages/landingv2/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <i class="fab fa-accusoft"></i>
         <!-- <img src="../../../../../assets/images/logo-1.jpg" width="40" height="40" alt="logo"> -->
       </a>
-      <h5> <a class="nav-link titlenav" href="index.html">LENDIUP</a></h5>
+      <h5> <a class="nav-link titlenav" href="index.html">LENDILLANOS</a></h5>
         <button class="navbar-toggler collapsed " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar top-bar mt-0"></span>
             <span class="icon-bar middle-bar"></span>
@@ -33,9 +33,9 @@
                                 <a class="dropdown-item " [routerLink]="['/landing/op3']">
                                     Inicio Opcion 3
                                 </a>
-                               
+
                             </div>
-                            
+
                         </div>
                     </div> <!-- / .row -->
                 </li>
@@ -48,7 +48,7 @@
                           <a class="dropdown-link dropdown-toggle" data-toggle="dropdown" href="#!">
                             Préstamos
                           </a>
-                          
+
                           <div class="dropdown-menu">
                               <a class="dropdown-item" href="loan-listing-image.html">
                                   Préstamos Usando Lista De Imagenes
@@ -56,7 +56,7 @@
                               <a class="dropdown-item" href="loan-listing-icon.html">
                                 Préstamos Usando Lista De Iconos
                               </a>
-                      
+
                           </div>
                       </li> -->
                       <li>
@@ -79,7 +79,7 @@
                           Prestamo Para Construcción
                       </a>
                       </li>
-                      
+
                       <li>
                       <a class="dropdown-item" [routerLink]="['/landing/op2/invierte']">
                         INVIERTE
@@ -87,7 +87,7 @@
                       </li>
                   </ul>
               </li>
-              
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#!" id="navbarFeatures" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Sobre Nosotros
@@ -99,8 +99,8 @@
                         <li> <a class="dropdown-item" href="#!">Testimonios</a></li>
                         <li> <a class="dropdown-item " href="contact-us.html">Contáctenos</a></li>
                     </ul>
-                    
-                  
+
+
                 </li>
 
                 <li class="nav-item dropdown">
@@ -116,10 +116,10 @@
                       <a class="dropdown-item" [routerLink]="['/auth/login']">INGRESAR2</a>
                     </li>
                   </ul>
-                  
-                
+
+
               </li>
-               
+
             </ul>
         </div>
     </div>
