--- a/Front/src/app/landing/pages/landingv2/one2/one2.component.html
+++ b/Front/src/app/landing/pages/landingv2/one2/one2.component.html
@@ -10,7 +10,7 @@
           <i class="fab fa-accusoft"></i>
           <!-- <img src="../../../../../assets/images/logo-1.jpg" width="40" height="40" alt="logo"> -->
         </a>
-        <h5> <a class="nav-link titlenav" href="index.html">LENDIUP</a></h5>
+        <h5> <a class="nav-link titlenav" href="index.html">LENDILLANOS</a></h5>
           <button class="navbar-toggler collapsed bg-dark text-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="icon-bar top-bar mt-0"></span>
               <span class="icon-bar middle-bar"></span>
@@ -138,7 +138,7 @@
 <ngb-carousel class="slider" id="slider">
   <ng-template ngbSlide>
     <div class="slider-gradient-img">
-      <img [src]="images[0]" alt="Lendiup" class="">
+      <img [src]="images[0]" alt="Lendillano" class="">
       <div class="container">
         <div class="row mt-5">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
@@ -161,7 +161,7 @@
 
   <ng-template ngbSlide>
     <div class="slider-gradient-img">
-      <img [src]="images[1]" alt="Lendiup" class="">
+      <img [src]="images[1]" alt="Lendillano" class="">
       <div class="container">
         <div class="row mt-5">
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
@@ -220,7 +220,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-1.png"
-            alt="Lendiup - Logo 1"
+            alt="Lendillano - Logo 1"
           />
         </div>
       </div>
@@ -228,7 +228,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-2.png"
-            alt="Lendiup - Logo 2"
+            alt="Lendillano - Logo 2"
           />
         </div>
       </div>
@@ -236,7 +236,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-3.png"
-            alt="Lendiup - Logo 3"
+            alt="Lendillano - Logo 3"
           />
         </div>
       </div>
@@ -244,7 +244,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-4.png"
-            alt="Lendiup - Logo 4"
+            alt="Lendillano - Logo 4"
           />
         </div>
       </div>
@@ -252,7 +252,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-5.png"
-            alt="Lendiup - Logo 5"
+            alt="Lendillano - Logo 5"
           />
         </div>
       </div>
@@ -260,7 +260,7 @@
         <div class="lender-box">
           <img
             src="../../../../../assets/images/lender-logo-6.png"
-            alt="Lendiup - Logo 6"
+            alt="Lendillano - Logo 6"
           />
         </div>
       </div>
@@ -293,7 +293,7 @@
               <a href="#!"
                 ><img
                   src="../../../../../assets/images/loan.svg"
-                  alt="Lendiup - Logo 1"
+                  alt="Lendillano - Logo 1"
                   class="icon-svg-2x"
               /></a>
             </div>
@@ -317,7 +317,7 @@
               <a href="#!"
                 ><img
                   src="../../../../../assets/images/mortgage.svg"
-                  alt="Lendiup - Logo 1"
+                  alt="Lendillano - Logo 1"
                   class="icon-svg-2x"
               /></a>
             </div>
@@ -339,7 +339,7 @@
               <a href="#!"
                 ><img
                   src="../../../../../assets/images/car.svg"
-                  alt="Lendiup - Logo 2"
+                  alt="Lendillano - Logo 2"
                   class="icon-svg-2x"
               /></a>
             </div>
@@ -361,7 +361,7 @@
               <a href="#!">
                 <img
                   src="../../../../../assets/images/loan.svg"
-                  alt="Lendiup - Logo 3"
+                  alt="Lendillano - Logo 3"
                   class="icon-svg-2x"
               /></a>
             </div>
@@ -547,7 +547,7 @@
           <div class="customer-img">
             <img
               src="../../../../../assets/images/customer-1.jpg"
-              alt="Lendiup - Logo 12"
+              alt="Lendillano - Logo 12"
               class="img-circle"
             />
           </div>
@@ -570,7 +570,7 @@
           <div class="customer-img">
             <img
               src="../../../../../assets/images/customer-2.jpg"
-              alt="Lendiup - Logo 12"
+              alt="Lendillano - Logo 12"
               class="img-circle"
             />
           </div>
@@ -792,7 +792,7 @@
             <a href="blog-single.html" class="imghover"
               ><img
                 src="../../../../../assets/images/blog-img.jpg"
-                alt="Lendiup - Logo 12"
+                alt="Lendillano - Logo 12"
                 class="img-fluid"
             /></a>
           </div>
@@ -848,7 +848,7 @@
             <a href="blog-single.html" class="imghover"
               ><img
                 src="../../../../../assets/images/blog-img-2.jpg"
-                alt="Lendiup - Logo 12"
+                alt="Lendillano - Logo 12"
                 class="img-fluid"
             /></a>
           </div>
