--- a/Front/src/app/landing/pages/landingv3/one3/one3.component.html
+++ b/Front/src/app/landing/pages/landingv3/one3/one3.component.html
@@ -15,7 +15,7 @@
                 <i class="fab fa-accusoft"></i>
                 <!-- <img src="../../../../../assets/images/logo-1.jpg" width="40" height="40" alt="logo"> -->
               </a>
-              <h5> <a class="nav-link titlenav" href="index.html">LENDIUP</a></h5>
+              <h5> <a class="nav-link titlenav" href="index.html">LENDILLANOS</a></h5>
               <ul class="nav navbar-nav alinpage align-self-end">
 
 
@@ -47,7 +47,7 @@
 
 
                 </li>
-            
+
 
                 <li class="nav-item" role="presentation"><a class="nav-link"
                     href="">CONTACTANOS</a>
@@ -184,7 +184,7 @@
         <div class="container text-center">
           <div class="intro">
             <p class="text-center title-ph2">Estas reportado!!!</p>
-            <p class="text-center text-normal">Tienes vehiculo o casa? 
+            <p class="text-center text-normal">Tienes vehiculo o casa?
                 Si es asi no importa que estes reportado, sobre hipoteca o el vehiculo te prestamos
 
             </p>
@@ -259,7 +259,7 @@
 
 
 
-  
+
 
 
 
