--- a/Front/src/app/shared-dashboard/sidebar/sidebar.component.html
+++ b/Front/src/app/shared-dashboard/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     </div>
   </a>
   <a routerLink="/dashboard/solicitud" class="simple-text logo-normal" >
-      Lendiup
+      Lendillano
   </a>
 </div>
 <div class="sidebar-wrapper" style="background-color: #15549a">
@@ -34,7 +34,7 @@
 
     <a class="navbar-brand" [routerLink]="['/']" matTooltip="Home">
       <h1>
-        LENDIUP
+        LENDILLANOS
       </h1>
     </a>
 
