--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <!-- Brand -->
         <a class="navbar-brand" routerLink="/landing/personal">
             <i class="fab fa-accusoft"></i>
-            <strong>     LENDIUP</strong>
+            <strong>     LENDILLANOS</strong>
             <p> Prestamos</p>
         </a>
 
@@ -46,12 +46,12 @@
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
-                    <a href="https://www.facebook.com/lendiup/" class="nav-link" target="_blank">
+                    <a href="https://www.facebook.com/lendillano/" class="nav-link" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://twitter.com/lendiup" class="nav-link" target="_blank">
+                    <a href="https://twitter.com/lendillano" class="nav-link" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
