--- a/Front/src/app/shared/register-quickloan/register-quickloan.component.html
+++ b/Front/src/app/shared/register-quickloan/register-quickloan.component.html
@@ -114,7 +114,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <embed src="../../../assets/pdf/Terminos Y Condiciones - Lendiup.pdf" frameborder="0" width="100%" height="400px">
+        <embed src="../../../assets/pdf/Terminos Y Condiciones - Lendillano.pdf" frameborder="0" width="100%" height="400px">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
